- The backup and logs directory will be in the current directory if the release is portable edition
- Renamed scanner files to more proper names
- Uses my own code instead of Type.GetTypeFromProgID()
- Replaced checkboxes with listview in options so different languages can be displayed properly
- Added power user option that allows the program to automatically repair problems and close the program
- Country flags are displayed beside each language
- Automatically changes to current ui culture once the program is started
- Translated strings that are not controls and are in the code files
- Fixed error when switching to chinese (traditional or simplified)
- Upgraded TreeView Advanced to version 1.7
- Expands all nodes when finished scanning registry
- Added a sorter tree model so the results can be sorted
- Details are shown in a window instead of in the main window
- Added status strip to display welcome and results messages

+ Version 1.4 Released

- Restore points are saved to correct location (v1.4.0.1 released)
- Removed unneeded label in scan dialog
- Updated Russian Translations
- Updated Dutch Translations
- Added Hungarian Translations
- Updated Portuguese Translation
- Updated Polish Translation
- Updated Italian Translations
- Updated Swedish Translations
- Changes registry key rights when removing values and sub keys 
- Added Turkish Translations
- Checks for Common Tools.dll when program starts
- Updated Greek Translations
- Added Lithuanian Translations
- Updated Chinese (Simplified & Traditional) Translations
- Updated Turkish Translations
- Changed bug report URL
- Scans HKCU\Software\Microsoft\Windows\ShellNoRoam\MUICache for invalid file references
- Programs using the Windows Installer can be uninstalled using the uninstall manager
- Uninstall manager is compatible with 64-bit systems
- Creates first system restore when LRC is installed instead of when it first starts
- Updated assembly information

+ Version 1.4.1 Released